--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="wrapper">
                     <ul class="menu">
                     <li class="menu-item"><a href="#"><underline>Home</underline></a></li>
-                    <li class="menu-item"><a href="#"><underline>Products</underline></a></li>
+                    <li class="menu-item"><a href="shop.html"><underline>Products</underline></a></li>
                     <li class="menu-item"><a href="#"><underline>Customise</underline></a></li>
                     <li class="menu-item"><a href="#"><underline>Studio</underline></a></li>
                     <li class="menu-item"><a href="#"><underline>About</underline></a></li>
