--- a/shop-details.html
+++ b/shop-details.html
@@ -67,43 +67,45 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- Header Section Begin -->
-            <header class="header" style="background-color: transparent;">
-                <nav class="navbar">
-                <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
-                <input type="checkbox" id="nav" class="hidden">
-                <label for="nav" class="nav-toggle">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <div class="wrapper">
-                    <ul class="menu">
-                    <li class="menu-item"><a href="#"><underline>Home</underline></a></li>
-                    <li class="menu-item"><a href="#"><underline2>Products</underline></a></li>
-                    <li class="menu-item"><a href="#"><underline3>Customise</underline></a></li>
-                    <li class="menu-item"><a href="#"><underline4>Studio</underline></a></li>
-                    <li class="menu-item"><a href="#"><underline5>About</underline></a></li>
-                    </ul>
-                </div>
-                </nav>
-            </header>
-        <!-- Header Section Ends -->
-    
+    <div class="containers">
+      <header class="header" style="background-color: transparent;">
+          <nav class="navbar"  style="justify-content: center;">
+          <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
+          <input type="checkbox" id="nav" class="hidden">
+          <label for="nav" class="nav-toggle">
+              <span></span>
+              <span></span>
+              <span></span>
+          </label>
+          <div class="wrapper">
+              <ul class="menu">
+              <li class="menu-item"><a href="index.html"><underline>Home</underline></a></li>
+              <li class="menu-item"><a href="shop-details.html"><underline>Products</underline></a></li>
 
-    <!-- Header Section Begin -->
+              <li class="menu-item"><a href="shop.html"><underline>Studio</underline></a></li>
+              <li class="menu-item"><a href="faq.html"><underline>About</underline></a></li>
+              </ul>
+          </div>
+          </nav>
+      </header>
+  <!-- Header Section Ends -->
+
+
+
+    <!-- Product Section Begin -->
     <div class="section-fluid-main">
         <div class="section">
           <div class="info-wrap mob-margin">
-            <p class="title-up">Modern chair</p>
-            <h2>Sella Gastro</h2>
-            <h4>$174 <span>$237</span></h4>
+            <p class="title-up">Modern Dining Table</p>
+            <h2>Le Canal Table</h2>
+            <h4>£1499 <span>£1999</span></h4>
             <div class="section-fluid">
               <input class="desc-btn" type="radio" id="desc-1" name="desc-btn" checked />
               <label for="desc-1">Description</label>
               <input class="desc-btn" type="radio" id="desc-2" name="desc-btn" />
               <label for="desc-2">Details</label>
               <div class="section-fluid desc-sec accor-1">
-                <p>The chair construction is made of ash tree. Upholstery and wood color at customer's request.</p>
+                <p>Design based from the canal in skipton....</p>
               </div>
               <div class="section-fluid desc-sec accor-2">
                 <div class="section-inline">
@@ -120,31 +122,31 @@
                 </div>
               </div>
             </div>
-            <h5>Choose upholstery:</h5>
+            <h5>Choose resin colour:</h5>
           </div>
           <div class="clearfix"></div>
           <input class="color-btn for-color-1" type="radio" id="color-1" name="color-btn" checked />
-          <label class="first-color" for="color-1"></label>
+          <label class="first-color"  style="background-image: url('img/1.png')" for="color-1"></label>
           <input class="color-btn for-color-2" type="radio" id="color-2" name="color-btn" />
-          <label class="color-2" for="color-2"></label>
+          <label class="color-2" style="background-image: url('img/2.png')" for="color-2"></label>
           <input class="color-btn for-color-3" type="radio" id="color-3" name="color-btn" />
-          <label class="color-3" for="color-3"></label>
+          <label class="color-3" style="background-image: url('img/3.png')" for="color-3"></label>
           <input class="color-btn for-color-4" type="radio" id="color-4" name="color-btn" />
-          <label class="color-4" for="color-4"></label>
+          <label class="color-4" style="background-image: url('img/4.png')" for="color-4"></label>
           <input class="color-btn for-color-5" type="radio" id="color-5" name="color-btn" />
-          <label class="color-5" for="color-5"></label>
+          <label class="color-5" style="background-image: url('img/5.png')" for="color-5"></label>
           <input class="color-btn for-color-6" type="radio" id="color-6" name="color-btn" />
-          <label class="color-6" for="color-6"></label>
+          <label class="color-6" style="background-image: url('img/6.png')" for="color-6"></label>
           <div class="clearfix"></div>
           <div class="info-wrap">
             <a href="#" class="btn"><i class="uil uil-shopping-cart icon"></i> Add To Cart</a>
           </div>
-          <div class="img-wrap chair-1"></div>
-          <div class="img-wrap chair-2"></div>
-          <div class="img-wrap chair-3"></div>
-          <div class="img-wrap chair-4"></div>
-          <div class="img-wrap chair-5"></div>
-          <div class="img-wrap chair-6"></div>
+          <div class="img-wrap chair-1" ></div>
+          <div class="img-wrap chair-2" ></div>
+          <div class="img-wrap chair-3" ></div>
+          <div class="img-wrap chair-4" ></div>
+          <div class="img-wrap chair-5" ></div>
+          <div class="img-wrap chair-6" ></div>
         </div>
     </div>
 
