--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </header>
         <!-- Header Section Ends -->
 
-        <section id="Hoverbuts" >
+        <section id="Hoverbuts" style="text-align: -webkit-center;">
                 <button class="cta"> hover me <i class="ri-arrow-right-line"></i></button>
         </section>
         
@@ -105,8 +105,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h2 class="section-heading">Services</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h2 class="section-heading">Order journey</h2>
+                            <h3 class="section-subheading text-muted"></h3>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -115,7 +115,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="glyphicon glyphicon-tree-conifer"></i>
                             </span>
-                            <h4 class="service-heading">Here is a pokok</h4>
+                            <h4 class="service-heading">Stage 2</h4>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                         </div>
                         <div class="col-md-4">
@@ -123,7 +123,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="glyphicon glyphicon-heart"></i>
                             </span>
-                            <h4 class="service-heading">Here's a heart</h4>
+                            <h4 class="service-heading">Stage 3</h4>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                         </div>
                         <div class="col-md-4">
@@ -131,7 +131,7 @@
                                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                                 <i class="glyphicon glyphicon-tint"></i>
                             </span>
-                            <h4 class="service-heading">Waterfall maybe?</h4>
+                            <h4 class="service-heading">Stage 4</h4>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                         </div>
                     </div>
