--- a/shop.html
+++ b/shop.html
@@ -31,11 +31,6 @@
 	<meta property="og:image:type" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogtype"/>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MW5JBGL');</script>
     <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Security-Policy"/>  
@@ -63,15 +58,56 @@
 
 <body>
 
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW5JBGL"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <div class="containers" style="width: 100%;">
+        <header class="header" style="background-image: url(); background-position: center;     background-size: cover;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+            <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
+            <input type="checkbox" id="nav" class="hidden">
+            <label for="nav" class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <div class="wrapper" >
+                <ul class="menu">
+                <li class="menu-item" style="    border-width: thin; border-radius: 20px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline>Home</underline></a></li>
+                <li class="menu-item"><a href="shop-details.html"><underline>Shop</underline></a></li>
+  
+                <li class="menu-item"><a href="shop.html"><underline>Studio</underline></a></li>
+                <li class="menu-item"><a href="faq.html"><underline>About</underline></a></li>
+                </ul>
+            </div>
+            </nav>
+        </header>
 
 
-    <!-- Header Section Begin -->
-
-        
+    <header class="main-visual">
+        <h1 class="main-visual__title">
+            <div class="intro-heading" style="float: left">|Crafting <a style="color:rgb(95, 95, 95);"> perfection|</a></div>
+        </h1>
+        <div class="main-visual__background">
+          <div id="js-background-slider" class="main-visual__background-slider swiper-container" data-loaded="false">
+            <div class="main-visual__background-slider-list swiper-wrapper">
+              <div class="main-visual__background-slider-item swiper-slide">
+                <img class="main-visual__background-slider-image" src="img/producttable1.png" width="1920" height="1280" alt="" decoding="async">
+              </div>
+              <div class="main-visual__background-slider-item swiper-slide">
+                <img class="main-visual__background-slider-image" src="img/producttable2.png" width="1920" height="1280" alt="" decoding="async">
+              </div>
+              <div class="main-visual__background-slider-item swiper-slide">
+                <img class="main-visual__background-slider-image" src="img/producttable3.png" width="1920" height="1280" alt="" decoding="async">
+              </div>
+              <div class="main-visual__background-slider-item swiper-slide">
+                <img class="main-visual__background-slider-image" src="img/producttable4.png" width="1920" height="1280" alt="" decoding="async">
+              </div>
+              <div class="main-visual__background-slider-item swiper-slide">
+                <img class="main-visual__background-slider-image" src="img/producttable5.png" width="1920" height="1280" alt="" decoding="async">
+              </div>
+            </div>
+            <div class="background-slider__pagination swiper-pagination"></div>
+          </div>
+        </div>
+      </header>
 
 <!-- Js Plugins -->
 <script src="js/jquery-3.3.1.min.js"></script>
