--- a/shop-details.html
+++ b/shop-details.html
@@ -54,6 +54,8 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
+    <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -63,8 +65,8 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-      <header class="header">
-          <nav class="navbar"  style="justify-content: center;">
+      <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 1vh; border-bottom: solid;">
+          <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
           <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
           <input type="checkbox" id="nav" class="hidden">
           <label for="nav" class="nav-toggle">
@@ -74,16 +76,17 @@
           </label>
           <div class="wrapper" >
               <ul class="menu">
-              <li class="menu-item"><a href="index.html"><underline>Home</underline></a></li>
-              <li class="menu-item" style="    border-width: thin; border-radius: 20px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="shop-details.html"><underline>Shop</underline></a></li>
+              <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
+              <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
 
-              <li class="menu-item"><a href="shop.html"><underline>Studio</underline></a></li>
-              <li class="menu-item"><a href="faq.html"><underline>About</underline></a></li>
+              <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
+              <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-etsy"></i></li>
+              <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">'About Us'</underline></a></li>
               </ul>
           </div>
           </nav>
       </header>
-  <!-- Header Section Ends -->
+<!-- Header Section Ends -->
 
 
 
@@ -146,59 +149,59 @@
         </div>
     </div>
 
-    <!-- Footer Section Begin -->
-      <footer class="footer_area section_padding_130_0">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-sm-6 col-lg-4">
-                <div class="single-footer-widget section_padding_0_130">
-                  <div class="footer-logo mb-3" style="    margin-top: 40px;"></div>
-                  <div class="copywrite-text mb-5" style="    margin-top: -100px;">
-                    <BR><br><BR><BR><p class="mb-0">Wood a wood chuck fuck if a wood could fuck a bit of wood<Br><br> BRAND &#169 2022<i class="lni-heart mr-1"></i>by TPS</a></p><br>
-                  <a href="www.google.com" class="icon"><i class="ri-instagram-line"></i></a>
-                  
-                </div>
-              </div>
-              </div>
-              <div class="col-12 col-sm-6 col-lg">
-                  <div class="single-footer-widget section_padding_0_130">
-                  <br><h5 class="widget-title">About</h5>
-                  <div class="footer_menu">
-                      <ul>
-                      <li><a href="https://www.amazon.co.uk/">Amazon Store</a></li>
-                      <li><a href="https://www.etsy.co.uk/">Etsy Store</a></li>
-                      <li><a href="BlogAugust.html">Blog</a></li>
-                      </ul>
+            <!-- Footer Section Begin -->
+            <footer class="footer_area section_padding_130_0">
+              <div class="container">
+                <div class="row">
+                  <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-footer-widget section_padding_0_130">
+                      <div class="footer-logo mb-3" style="    margin-top: 40px;"></div>
+                      <div class="copywrite-text mb-5" style="    margin-top: -100px;">
+                        <BR><br><BR><BR><p class="mb-0">Wood a wood chuck fuck if a wood could fuck a bit of wood<Br><br> BRAND &#169 2022<i class="lni-heart mr-1"></i>by TPS</a></p><br>
+                      <a href="www.google.com" class="icon"><i class="ri-instagram-line"></i></a>
+                      
+                    </div>
+                  </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-lg">
+                      <div class="single-footer-widget section_padding_0_130">
+                      <br><h5 class="widget-title">About</h5>
+                      <div class="footer_menu">
+                          <ul>
+                          <li><a href="https://www.amazon.co.uk/">Amazon Store</a></li>
+                          <li><a href="https://www.etsy.co.uk/">Etsy Store</a></li>
+                          <li><a href="BlogAugust.html">Blog</a></li>
+                          </ul>
+                      </div>
+                      </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-lg">
+                      <div class="single-footer-widget section_padding_0_130">
+                      <br><h5 class="widget-title">Support</h5>
+                      <div class="footer_menu">
+                          <ul>
+                          <li><a href="faq.html">Help</a></li>
+                          <li><a href="privacypolicy.html">Privacy Policy</a></li>
+                          <li><a href="termcondition.html">Term &amp; Conditions</a></li>
+                          <BR><br>
+                          </ul>
+                      </div>
+                      </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-lg">
+                      <div class="single-footer-widget section_padding_0_130">
+                      <br><h5 class="widget-title">Contact</h5>
+                      <div class="footer_menu">
+                          <ul>
+                          <li><a href="cravingcake@gmail.com">Email Us</a></li>
+                          <li><a href="faq.html">FAQ's</a></li>
+                          </ul>
+                      </div>
+                      </div>
                   </div>
                   </div>
               </div>
-              <div class="col-12 col-sm-6 col-lg">
-                  <div class="single-footer-widget section_padding_0_130">
-                  <br><h5 class="widget-title">Support</h5>
-                  <div class="footer_menu">
-                      <ul>
-                      <li><a href="faq.html">Help</a></li>
-                      <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                      <li><a href="termcondition.html">Term &amp; Conditions</a></li>
-                      <BR><br>
-                      </ul>
-                  </div>
-                  </div>
-              </div>
-              <div class="col-12 col-sm-6 col-lg">
-                  <div class="single-footer-widget section_padding_0_130">
-                  <br><h5 class="widget-title">Contact</h5>
-                  <div class="footer_menu">
-                      <ul>
-                      <li><a href="cravingcake@gmail.com">Email Us</a></li>
-                      <li><a href="faq.html">FAQ's</a></li>
-                      </ul>
-                  </div>
-                  </div>
-              </div>
-              </div>
-          </div>
-      </footer>
+          </footer>
       <!-- Footer Section End -->
 
 
