--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -70,76 +70,28 @@
 
 
     <!-- Header Section Begin -->
-    <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="header__top__inner">
-                            <div class="header__logo">
-                                <a href="index.html" style="width: 75%;"><img src="img/ion-icon name=logo-amazonion-icon (5).webp" alt="CravingCakeLogo"></a>
-                            </div>
-                            <div class="header__top__right">
-                                <div class="offcanvas__cart">
-                                    <div class="offcanvas__cart__links">
-                                    </div>
-                                </div>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="containers" style="width: 100%;">
+        <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 1vh; border-bottom: solid;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+            <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
+            <input type="checkbox" id="nav" class="hidden">
+            <label for="nav" class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <div class="wrapper" >
+                <ul class="menu">
+                <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
+                <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
+  
+                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
+                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-etsy"></i></li>
+                <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">'About Us'</underline></a></li>
+                </ul>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12" style="text-align: -webkit-center;">
-                        <div class="navigation">
-                            <ul>
-                                <li class="list">
-                                    <a href="index.html">
-                                        <span class="icon" style="--clr:#f45a51;">
-                                            <ion-icon name="home-outline"></ion-icon>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="list">
-                                    <a href="learnonline.html">
-                                        <span class="icon" style="--clr:#f45a51;">
-                                            <ion-icon name="school-outline"></ion-icon>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="list">
-                                    <a href="shop.html">
-                                        <span class="icon" style="--clr:#f45a51;">
-                                            <ion-icon name="storefront-outline"></ion-icon>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="list">
-                                    <a href="https://www.amazon.co.uk/">
-                                        <span class="icon" style="--clr:#f45a51;">
-                                            <ion-icon name="logo-amazon"></ion-icon>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="list">
-                                    <a href="faq.html">
-                                        <span class="icon" style="--clr:#f45a51;">
-                                            <ion-icon name="help"></ion-icon>
-                                        </span>
-                                    </a>
-                                </li>
-                                <div class="indicator"></div>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
+            </nav>
+        </header>
     <!-- Header Section End -->
 
     <h2 style="text-align:center; margin-top: 50px;">Privacy Policy</h2>
@@ -355,55 +307,35 @@ and such processing is carried out by automated means, you have the right to rec
       </p>
 
 
-        <!-- Footer Section Begin -->
-        <br><BR>
+            <!-- Footer Section Begin -->
             <footer class="footer_area section_padding_130_0">
                 <div class="container">
                   <div class="row">
-                    <!-- Single Widget-->
                     <div class="col-12 col-sm-6 col-lg-4">
                       <div class="single-footer-widget section_padding_0_130">
-                        <!-- Footer Logo-->
-                        <div class="footer-logo mb-3"></div>
-                        <p>You can place an order for some of the deliciously baked goods that Craving Cake is known for today!</p>
-                        <!-- Copywrite Text-->
-                        <div class="copywrite-text mb-5">
-                          <p class="mb-0"> Website	&#169 2022<i class="lni-heart mr-1"></i>by TPS</a></p><br>
-                        <!-- Footer Social Area-->
-                        <div class="footer_social_area">
-                        <a href="https://www.facebook.com/profile.php?id=100078954031236" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook">
-                        <i class="fa fa-facebook"></i></a>
-                        <a href="https://instagram.com/cravingcake_x?igshid=YmMyMTA2M2Y=" data-toggle="tooltip" data-placement="top" title="" data-original-title="Instagram">
-                        <i class="fa fa-instagram"></i></a>
-                        <a href="https://www.tiktok.com/@cravingcake_xx?_t=8UlmBXTkalK&_r=1" data-toggle="tooltip" data-placement="top" title="" data-original-title="TikTok">
-                        <i class="fa fa-birthday-cake"></i></a>
-                        <a href="mailto:t.southern@hotmail.co.uk" data-toggle="tooltip" data-placement="top" title="" data-original-title="Email Us">
-                        <i class="fa fa-comment-o"></i></a></div>
+                        <div class="footer-logo mb-3" style="    margin-top: 40px;"></div>
+                        <div class="copywrite-text mb-5" style="    margin-top: -100px;">
+                          <BR><br><BR><BR><p class="mb-0">Wood a wood chuck fuck if a wood could fuck a bit of wood<Br><br> BRAND &#169 2022<i class="lni-heart mr-1"></i>by TPS</a></p><br>
+                        <a href="www.google.com" class="icon"><i class="ri-instagram-line"></i></a>
+                        
                       </div>
                     </div>
                     </div>
-                    <!-- Single Widget-->
                     <div class="col-12 col-sm-6 col-lg">
                         <div class="single-footer-widget section_padding_0_130">
-                        <!-- Widget Title-->
                         <br><h5 class="widget-title">About</h5>
-                        <!-- Footer Menu-->
                         <div class="footer_menu">
                             <ul>
-                            <li><a href="index.html">About Us</a></li>
-                            <li><a href="termcondition.html">Terms &amp; Policy</a></li>
-                            <li><a href="shoping-cart.html">Shopping Cart</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="https://www.amazon.co.uk/">Amazon Store</a></li>
+                            <li><a href="https://www.etsy.co.uk/">Etsy Store</a></li>
+                            <li><a href="BlogAugust.html">Blog</a></li>
                             </ul>
                         </div>
                         </div>
                     </div>
-                    <!-- Single Widget-->
                     <div class="col-12 col-sm-6 col-lg">
                         <div class="single-footer-widget section_padding_0_130">
-                        <!-- Widget Title-->
                         <br><h5 class="widget-title">Support</h5>
-                        <!-- Footer Menu-->
                         <div class="footer_menu">
                             <ul>
                             <li><a href="faq.html">Help</a></li>
@@ -414,16 +346,13 @@ and such processing is carried out by automated means, you have the right to rec
                         </div>
                         </div>
                     </div>
-                    <!-- Single Widget-->
                     <div class="col-12 col-sm-6 col-lg">
                         <div class="single-footer-widget section_padding_0_130">
-                        <!-- Widget Title-->
                         <br><h5 class="widget-title">Contact</h5>
-                        <!-- Footer Menu-->
                         <div class="footer_menu">
                             <ul>
-                            <li><a href="mailto:t.southern@hotmail.co.uk">Email Us</a></li>
-                            <li><a href="termcondition.html">Term &amp; Conditions</a></li>
+                            <li><a href="cravingcake@gmail.com">Email Us</a></li>
+                            <li><a href="faq.html">FAQ's</a></li>
                             </ul>
                         </div>
                         </div>
